@@ -1,3 +1,9 @@
+Sun Nov 09 23:33:04 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: another step forwards towards implementation of
+	  slope fields and vector fields graphs.  UI is pretty much
+	  implemented.  But it doesn't do anything yet.
+
 Thu Nov 06 00:00:28 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: a tiny bit of cleanup, start implementing
